--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
+    "build:vercel": "npx prisma generate && next build", 
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx prisma generate",
+    "vercel-build": "npx prisma generate && next build",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
