--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "npx prisma generate && next build",
-    "build:vercel": "npx prisma generate && next build", 
+    "build:vercel": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate",
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "6.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
