--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
-    "build:vercel": "npx prisma generate && next build",
+    "build": "node build-vercel-final.js",
+    "build:vercel": "node build-vercel-final.js",
+    "build:safe": "next build",
+    "build:fallback": "npm run prisma:generate:safe && next build",
+    "build:test": "node test-build-deploy.js",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate",
-    "vercel-build": "npx prisma generate && next build",
-    "prisma:generate": "npx prisma generate"
+    "postinstall": "npm run prisma:generate:safe",
+    "vercel-build": "node build-vercel-final.js",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:safe": "npx prisma generate || echo 'Prisma generate failed, continuing with existing client...'",
+    "clean": "rimraf .next && rimraf node_modules/.prisma",
+    "build:production": "npm run clean && npm install && node build-vercel-final.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -37,6 +43,7 @@
     "next": "15.3.3",
     "next-safe-action": "^8.0.2",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
