--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,17 @@
 {
-  "buildCommand": "npx prisma generate && npm run build",
-  "installCommand": "npm install",
+  "buildCommand": "node build-vercel-final.js",
+  "installCommand": "npm ci --prefer-offline --no-audit",
   "env": {
-    "SKIP_ENV_VALIDATION": "1"
+    "SKIP_ENV_VALIDATION": "1",
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "PRISMA_GENERATE_IN_POSTINSTALL": "true"
+  },
+  "functions": {
+    "src/app/**/*.ts": {
+      "maxDuration": 30
+    },
+    "src/app/**/*.tsx": {
+      "maxDuration": 30
+    }
   }
 }
